syntax = "proto3";

option csharp_namespace = "GrpcService.Calc.Client";

package calc;

enum CalcOperationType
{
	Square=0;
	Cube=1;
}